--- a/package.json
+++ b/package.json
@@ -1,12 +1,15 @@
 {
-  "name": "js_boilerplate",
+  "name": "word-beater",
   "version": "1.0.0",
-  "description": "JavaScript OOP Tutorial (Traversy)",
+  "description": "JavaScript word game",
   "main": "index.js",
   "scripts": {
-    "build": "webpack --mode production",
-    "serve": "webpack-dev-server --mode development --open --hot",
-    "test": "jest --config=jest.config.json"
+    "build": "webpack --mode=production",
+    "dev": "webpack --mode=development",
+    "serve": "webpack-dev-server --mode=development --open --hot",
+    "test": "jest --config=jest.config.json",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d public"
   },
   "author": "Des Butler",
   "license": "MIT",
