--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "babel-preset-stage-2": "^6.24.1",
     "css-loader": "^1.0.0",
     "file-loader": "^1.1.11",
+    "gh-pages": "^1.2.0",
     "html-webpack-plugin": "^3.2.0",
     "jest": "^23.4.2",
     "json-loader": "^0.5.7",
